<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!--Data item that holds the reminder details-->
        <variable
            name="reminderDataItem"
            type="com.udacity.project4.locationreminders.reminderslist.ReminderDataItem" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/padding_normal"
        tools:context=".locationreminders.ReminderDescriptionActivity">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/google_button"
            app:srcCompat="@drawable/reminder"
            android:layout_marginBottom="@dimen/margin_large"
            android:contentDescription="@string/app_name" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/reminder_details"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_large"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:hint="@string/title"
            android:layout_margin="20dp"
            android:text="@{reminderDataItem.title}">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_large"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:hint="@string/description"
            android:layout_margin="20dp"
            android:text="@{reminderDataItem.description}">

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_large"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:hint="@string/location"
            android:layout_margin="20dp"
            android:text="@{reminderDataItem.location}">

        </TextView>

    </LinearLayout>
</layout>