<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/map_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:id="@+id/map"
            map:mapId="@string/map_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/select_location_button"/>

        <ImageButton
            android:id="@+id/location_settings"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:tint="@color/white"
            android:visibility="gone"
            android:layout_margin="@dimen/margin_normal"
            tools:visibility="visible"
            app:srcCompat="@drawable/ic_round_settings_applications_24"
            android:background="@color/transaprent_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/settings_location" />

        <Button
            android:id="@+id/select_location_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/use_location"
            app:latitude="@{viewModel.latitude}"
            app:longitude="@{viewModel.longitude}"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
